--- a/Front/index.html
+++ b/Front/index.html
@@ -12,15 +12,17 @@
     <p id="text">
     </p>
 
+    <a href="#" onclick="cliks()">Click</a>
+    <br><br>
+    <br><br>
 
-    <!-- <div class="pai">
-        <div><a href="#">1</a></div>
-        <div><a href="#">2</a></div>
-        <div><a href="#">3</a></div>
-        <div><a href="#">4</a></div>
-        <div><a href="#">5</a></div>
-        <div><a href="#">6</a></div>
-    </div> -->
+    <div id="tete" onmouseover="start()"  onmouseout="end()" class="sta">
+    </div>
+    <br>
+    <br>
+    <br>
+
+    <input value="xxxxx@xxx.com" onchange="mudou()" id="text-input" style="padding: 80px; font-size: 2rem; " placeholder="Digite algo!" type="text">
 
 
     <script src="js/scripts.js"></script>    
