--- a/Front/index.html
+++ b/Front/index.html
@@ -11,20 +11,12 @@
     <h1>Aprendendo JS</h1>
     <p id="text">
     </p>
-
-    <a href="#" onclick="cliks()">Click</a>
-    <br><br>
-    <br><br>
-
-    <div id="tete" onmouseover="start()"  onmouseout="end()" class="sta">
-    </div>
-    <br>
-    <br>
     <br>
 
-    <input value="xxxxx@xxx.com" onchange="mudou()" id="text-input" style="padding: 80px; font-size: 2rem; " placeholder="Digite algo!" type="text">
+    <input onchange="mudou()" id="text-input" style="padding: 80px; font-size: 2rem; " placeholder="Digite uma cor" type="text">
 
 
+    <button onclick="verificar()"  style="padding: 50px; ">Verificar</button>
     <script src="js/scripts.js"></script>    
 </body>
 </html>
