--- a/Front/index.html
+++ b/Front/index.html
@@ -13,10 +13,19 @@
     </p>
     <br>
 
-    <input onchange="mudou()" id="text-input" style="padding: 80px; font-size: 2rem; " placeholder="Digite uma cor" type="text">
+    <input id="cor" style="padding: 80px; font-size: 2rem; " placeholder="Digite uma cor" type="text">
 
 
-    <button onclick="verificar()"  style="padding: 50px; ">Verificar</button>
+    <button onclick="verificaCor()"  style="padding: 50px; ">Verificar</button>
+    <br><br>
+
+    <select name="select" id="cor">
+        <option value="azul">Azul</option>
+        <option value="preto">Preto</option>
+        <option value="amarelo">Amarelo</option>
+        <option value="vermelho">Vermelho</option>
+
+    </select>
     <script src="js/scripts.js"></script>    
 </body>
 </html>
