--- a/Front/index.html
+++ b/Front/index.html
@@ -9,23 +9,9 @@
 </head>
 <body>
     <h1>Aprendendo JS</h1>
-    <p id="text">
-    </p>
-    <br>
-
-    <input id="cor" style="padding: 80px; font-size: 2rem; " placeholder="Digite uma cor" type="text">
-
-
-    <button onclick="verificaCor()"  style="padding: 50px; ">Verificar</button>
-    <br><br>
-
-    <select name="select" id="cor">
-        <option value="azul">Azul</option>
-        <option value="preto">Preto</option>
-        <option value="amarelo">Amarelo</option>
-        <option value="vermelho">Vermelho</option>
-
-    </select>
+    <p id="text"></p>
+    
+    
     <script src="js/scripts.js"></script>    
 </body>
 </html>
