--- a/Front/index.html
+++ b/Front/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Aprendendo JS</h1>
-    <p id="text"></p>
-    
+    <h1>Controle de tempo</h1>
+    <h2 id="tempo">0</h2>
+    <button onclick="ativarContagem()" class="start">Ativar Contagem</button>
+    <button class="stop">Parar Contagem</button>
     
     <script src="js/scripts.js"></script>    
 </body>
