--- a/Front/index.html
+++ b/Front/index.html
@@ -11,7 +11,7 @@
     <h1>Controle de tempo</h1>
     <h2 id="tempo">0</h2>
     <button onclick="ativarContagem()" class="start">Ativar Contagem</button>
-    <button class="stop">Parar Contagem</button>
+    <button onclick="pararContagem()" class="stop">Parar Contagem</button>
     
     <script src="js/scripts.js"></script>    
 </body>
